<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:text="@string/login_title"
        style="@style/screenTitle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <TextView
        android:text="@string/username_prompt"
        style="@style/sectionHeader" />

    <EditText
        android:id="@+id/editLoginUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Username"
        android:textAlignment="center"
        android:inputType="text"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:text="@string/password_prompt"
        style="@style/sectionHeader" />

    <EditText
        android:id="@+id/editLoginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <Button
        android:id="@+id/loginBtn"
        android:text="@string/login_title"
        style="@style/nextActionButton"
        app:cornerRadius="10dp" />

</LinearLayout>