<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Notes">


    <TextView
        style="@style/screenTitle"
        android:text="@string/notes_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        style="@style/sectionHeader"
        android:text="@string/filter_prompt" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <EditText
        android:id="@+id/editFilterText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@color/darkGreen"
        android:textSize="22sp"
        android:inputType="text"
        android:hint="Enter keyword to filter notes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/undoBtn"
            style="@style/nextActionButton"
            android:text="unfilter"
            android:visibility="gone"
            app:cornerRadius="10dp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/filterBtn"
            style="@style/actionButton"
            android:text="@string/filter_btn"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/warningNote"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="#FFE082"
        android:text="Diary empty!"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="460dp" >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>