<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Tracker">

    <TextView
        style="@style/screenTitle"
        android:text="@string/tracker_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        style="@style/sectionHeader"
        android:text="@string/mood_prompt" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/verySad"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="very sad"
            app:srcCompat="@drawable/very_sad_emoji" />

        <Space
            android:layout_width="7dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/sad"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="sad"
            app:srcCompat="@drawable/sad_emoji" />

        <Space
            android:layout_width="7dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/neutral"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="neutral"
            app:srcCompat="@drawable/neutral_emoji" />

        <Space
            android:layout_width="7dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/happy"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="happy"
            app:srcCompat="@drawable/happy_emoji" />

        <Space
            android:layout_width="7dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/veryHappy"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="very happy"
            app:srcCompat="@drawable/very_happy_emoji" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/moodTextView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="#FFF9C4"
        android:text="@string/feeling_prompt"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        style="@style/sectionHeader"
        android:text="@string/anxiety" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        style="@style/hintNote"
        android:background="#FFF59D"
        android:drawablePadding="7dp"
        android:paddingHorizontal="7dp"
        android:text="@string/anxiety_hint"
        app:drawableLeftCompat="@android:drawable/ic_dialog_info"
        app:drawableTint="#FFB300" />

    <RadioGroup
        android:id="@+id/anxietyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp" >

        <RadioButton
            android:id="@+id/noAnxiety"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/btn_radio_material_anim"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:labelFor="@id/level1"
            android:paddingHorizontal="13dp"
            android:text="0"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/btn_radio_material_anim"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:paddingHorizontal="13dp"
            android:text="1"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/btn_radio_material_anim"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="13dp"
            android:text="2"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/btn_radio_material_anim"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:paddingHorizontal="13dp"
            android:text="3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/level4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/btn_radio_material_anim"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="13dp"
            android:text="4"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/highAnxiety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/btn_radio_material_anim"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="13dp"
            android:text="5"
            android:textStyle="bold" />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        style="@style/sectionHeader"
        android:text="@string/meds" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <FrameLayout
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/submitTrackerBtn"
        style="@style/actionButton"
        android:text="@string/submit_btn"
        app:cornerRadius="10dp" />

</LinearLayout>